--- a/style.css
+++ b/style.css
@@ -16,9 +16,167 @@ html {
     font-size: 13px;
 }
 
+body {
+    font-family: Manrope, sans-serif;
+    background-color: var(--clr-lightGrayishBlue);
+}
 
+img {
+    max-width: 100%;
+}
 
+.card {
+    width: min(80%, 320px);
+    margin: 5rem auto;
+    background-color: white;
+    border-radius: 10px;
+    display: grid;
+    grid-template-rows: 200px auto;
+}
 
+.card-img-container {
+    background-image: url("images/drawers.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top;
+    border-radius: 10px 10px 0 0;
+}
+
+.container {
+    width: 80%;
+    margin-inline: auto;
+}
+
+.card-content > .container {
+    margin-top: 1.5rem;
+    color: var(--clr-veryDarkGrayishBlue);
+    
+    > h1 {
+        font-size: clamp(15px, 13.2609px + 0.5435vw, 20px);
+        font-weight: 700;
+    }
+
+    > p {
+        color: var(--clr-desaturatedDarkBlue);
+        font-size: clamp(13px, 12.3043px + 0.2174vw, 15px);
+        font-weight: 500;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+}
+
+.card-profile {
+    padding-block: 1.5rem;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+
+    .avatar {
+        width: clamp(30px, 26.5217px + 1.087vw, 40px);
+        border-radius: 50%;
+    }
+
+    .profile-desc {
+        > h2 {
+            font-size: clamp(10px, 8.9565px + 0.3261vw, 13px);
+        }
+
+        > p {
+            font-size: clamp(10px, 8.9565px + 0.3261vw, 13px);
+            color: var(--clr-desaturatedDarkBlue);
+        }
+
+    }
+
+    .share-btn {
+        width: clamp(30px, 26.5217px + 1.087vw, 40px);
+        height: clamp(30px, 26.5217px + 1.087vw, 40px);
+        border-radius: 50%;
+        margin-left: auto;
+        background-color: var(--clr-lightGrayishBlue);
+        position: relative;
+
+        :hover {
+            cursor: pointer;
+        }
+    }    
+
+}
+
+.share-div {
+    background-color: var(--clr-veryDarkGrayishBlue);
+    padding-block: 1.5rem;
+    border-radius: 0 0 10px 10px;
+}
+
+.share-flex {
+    color: var(--clr-grayishBlue);
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    font-size: 12px;
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+
+    .facebook, .twitter, .pinterest {
+        :hover {
+            scale: 1.3;
+        }
+
+        :active {
+            scale: 1;
+        }
+    }
+
+    .share-btn {
+        width: clamp(30px, 26.5217px + 1.087vw, 40px);
+        height: clamp(30px, 26.5217px + 1.087vw, 40px);
+        border-radius: 50%;
+        margin-left: auto;
+        background-color: var(--clr-desaturatedDarkBlue);
+        
+        .share-btn-img {
+            filter: brightness(0) invert(1);
+        }
+
+        :hover {
+            cursor: pointer;
+        }
+    }    
+
+}
+
+.share-desktop {
+    width: max-content;
+    position: absolute;
+    top: -55px;
+    left: -75px;
+}
+
+.share-flex.desktop {
+    position: relative;
+    background-color: var(--clr-veryDarkGrayishBlue);
+    padding: .8rem 1.8rem;
+    border-radius: 5px;
+    font-size: 10px;
+    align-items: center;
+    width: 180px;
+    z-index: 1;
+}
+
+.arrow-desktop {
+    background-color: var(--clr-veryDarkGrayishBlue);
+    height: 15px;
+    width: 15px;
+    margin-inline: auto;
+    translate: 0 -8px;
+    rotate: 45deg;
+}
+
+.hidden {
+    display: none;
+}
 
 .attribution {
     font-size: clamp(9px, 7.9565px + 0.3261vw, 12px);
@@ -29,4 +187,27 @@ html {
 .attribution a {
     color: hsl(228, 45%, 44%);
     text-decoration: none;
+}
+
+
+
+@media (min-width: 600px) {
+    main {
+        display: flex;
+        flex-direction: column;
+        min-height: 100svh;
+    }
+
+    .card {
+        margin: auto;
+        width: min(80%, 750px);
+        grid-template-rows: none;
+        grid-template-columns: 1fr 2fr;
+    }
+
+    .card-img-container {
+        border-radius: 10px 0 0 10px;
+        background-position: left;
+    };
+
 }
